[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsdm"
version = "0.1.0"
description = "Molecular Dynamics pipeline for vsdock hits"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openmm",
    "mdtraj",
    "mdanalysis",
    "pyyaml",
    "pandas",
    "numpy>=1.23.5,<2.0.0",
    "requests",
    "tqdm",
]

[project.scripts]
vsdm = "vsdm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vsdm*"]
